added row-flush and flush classes

--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,17 @@ th {
     display: table;
     clear: both; }
 
+.row-flush {
+  margin-left: 0;
+  margin-right: 0; }
+  .row-flush:after {
+    content: " ";
+    display: table;
+    clear: both; }
+
+.flush {
+  padding: 0; }
+
 /* Column Width */
 .col-1 {
   width: 8.33333%; }
@@ -446,7 +457,14 @@ img {
 
   .row {
     margin-left: -0.5em;
-    margin-right: -0.5em; } }
+    margin-right: -0.5em; }
+
+  .row-flush {
+    margin-left: 0;
+    margin-right: 0; }
+
+  .flush {
+    padding: 0; } }
 @media (max-width: 768px) {
   [class^="col-"] {
     width: 100%; }
