--- a/sass/basic/_grid.scss
+++ b/sass/basic/_grid.scss
@@ -24,6 +24,21 @@
 	}
 }
 
+.row-flush {
+	margin-left: 0;
+	margin-right: 0;
+	
+	&:after {
+		content: " ";
+		display: table;
+		clear: both;
+	}
+}
+
+.flush {
+	padding: 0;
+}
+
 /* Column Width */
 @for $i from 1 through $column-count {
 	.col-#{$i} {
@@ -66,6 +81,15 @@ img {
 	.row {
 		margin-left: -$gutter / 2;
 		margin-right: -$gutter / 2;
+	}
+
+	.row-flush {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+	.flush {
+		padding: 0;
 	}
 }
 
