--- a/sass/settings/_settings.scss
+++ b/sass/settings/_settings.scss
@@ -7,3 +7,24 @@ $small: 768px;
 
 $column-count: 12;
 $gutter: 1em;
+
+
+// Typography Variables
+
+/* Colors */
+$text-color: #333;
+$link-color: #0f82bd;
+$hr-color: #ccc;
+$muted-text-color: lighten($text-color, 30%);
+
+
+$baseline: 1.5em;
+
+$body-font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+
+$h1-size: 3.998em;
+$h2-size: 2.827em;
+$h3-size: 1.999em;
+$h4-size: 1.414em;
+$h5-size: 1em;
+$h6-size: .707em;
