--- a/css/styles.css
+++ b/css/styles.css
@@ -362,8 +362,29 @@ th {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-/* Screen sizes */
-/* Colors */
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 1.0 - Grid
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 1.1 - Screen sizes */
+/* 1.2 - columns */
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 2.0 - Typography
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 2.1 - Colors */
+/* 2.2 - Baseline */
+/* 2.3 - Font */
+/* 2.4 - Sizes */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Buttons
+*--------------------------------------------------------------------------------------------------
+*/
+/* 3.1 - Sizes */
+/* 3.2 - Colors */
 /* Main Container */
 .container {
   width: 95%;
@@ -525,8 +546,29 @@ img {
 
   .small-three-quarters {
     width: 75%; } }
-/* Screen sizes */
-/* Colors */
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 1.0 - Grid
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 1.1 - Screen sizes */
+/* 1.2 - columns */
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 2.0 - Typography
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 2.1 - Colors */
+/* 2.2 - Baseline */
+/* 2.3 - Font */
+/* 2.4 - Sizes */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Buttons
+*--------------------------------------------------------------------------------------------------
+*/
+/* 3.1 - Sizes */
+/* 3.2 - Colors */
 html {
   font-size: 1em; }
 
@@ -594,6 +636,89 @@ blockquote {
   margin-left: 1.5em; }
   blockquote footer {
     font-style: normal; }
+
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 1.0 - Grid
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 1.1 - Screen sizes */
+/* 1.2 - columns */
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 2.0 - Typography
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 2.1 - Colors */
+/* 2.2 - Baseline */
+/* 2.3 - Font */
+/* 2.4 - Sizes */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Buttons
+*--------------------------------------------------------------------------------------------------
+*/
+/* 3.1 - Sizes */
+/* 3.2 - Colors */
+button,
+.btn,
+.btn-primary,
+.btn-small,
+.btn-large,
+a.btn,
+a.btn-primary,
+a.btn-small,
+a.btn-large {
+  border: 0;
+  background-color: #dde2d4;
+  color: #333;
+  cursor: pointer;
+  line-height: 1;
+  font-family: inherit;
+  font-size: inline-block;
+  text-decoration: none;
+  display: inline-block;
+  padding: .75em 1.5em; }
+  button:hover,
+  .btn:hover,
+  .btn-primary:hover,
+  .btn-small:hover,
+  .btn-large:hover,
+  a.btn:hover,
+  a.btn-primary:hover,
+  a.btn-small:hover,
+  a.btn-large:hover {
+    background-color: #616d4a;
+    color: #fff; }
+  button:active,
+  .btn:active,
+  .btn-primary:active,
+  .btn-small:active,
+  .btn-large:active,
+  a.btn:active,
+  a.btn-primary:active,
+  a.btn-small:active,
+  a.btn-large:active {
+    background-color: #a1af88; }
+
+.rounded {
+  border-radius: 3px; }
+
+.btn-primary {
+  background-color: #0f82bd;
+  color: #d0ecfb; }
+  .btn-primary:hover {
+    background-color: #0b618e;
+    color: #fff; }
+  .btn-primary:active {
+    background-color: #0d72a5; }
+
+.btn-small {
+  font-size: 0.75em; }
+
+.btn-large {
+  font-size: 2em;
+  font-weight: bold; }
 
 /**
  *--------------------------------------------------------------------------------------------------
