adds in the fields and fieldsets

--- a/public/sass/settings/_settings.scss
+++ b/public/sass/settings/_settings.scss
@@ -13,7 +13,8 @@
  $column-count: 12;
  $gutter: 1em;
 
-/**
+
+ /**
  *--------------------------------------------------------------------------------------------------
  * 2.0 - Typography
  *--------------------------------------------------------------------------------------------------
@@ -39,6 +40,7 @@
  $h5-size: 1em;
  $h6-size: .707em;
 
+ 
  /**
  *--------------------------------------------------------------------------------------------------
  * 3.0 - Buttons
@@ -57,6 +59,17 @@
 
  $btn-primary-bg: #0f82bd;
  $btn-primary-text-color: lighten($btn-primary-bg, 50%);
+
+
+ /**
+ *--------------------------------------------------------------------------------------------------
+ * 3.0 - Form
+ *--------------------------------------------------------------------------------------------------
+ */
+
+ $field-border-color: #ccc;
+ $field-error-color: red;
+ $field-required-color: red;
 
  
 
