--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,7 +121,7 @@ mark {
 /**
  * Address inconsistent and variable font size in all browsers.
  */
-small, blockquote footer {
+small, blockquote footer, form .field-group .help {
   font-size: 80%; }
 
 /**
@@ -370,10 +370,10 @@ th {
 /* 1.1 - Screen sizes */
 /* 1.2 - columns */
 /**
- *--------------------------------------------------------------------------------------------------
- * 2.0 - Typography
- *--------------------------------------------------------------------------------------------------
- */
+*--------------------------------------------------------------------------------------------------
+* 2.0 - Typography
+*--------------------------------------------------------------------------------------------------
+*/
 /* 2.1 - Colors */
 /* 2.2 - Baseline */
 /* 2.3 - Font */
@@ -385,6 +385,11 @@ th {
 */
 /* 3.1 - Sizes */
 /* 3.2 - Colors */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Form
+*--------------------------------------------------------------------------------------------------
+*/
 /* Main Container */
 .container {
   width: 95%;
@@ -554,10 +559,10 @@ img {
 /* 1.1 - Screen sizes */
 /* 1.2 - columns */
 /**
- *--------------------------------------------------------------------------------------------------
- * 2.0 - Typography
- *--------------------------------------------------------------------------------------------------
- */
+*--------------------------------------------------------------------------------------------------
+* 2.0 - Typography
+*--------------------------------------------------------------------------------------------------
+*/
 /* 2.1 - Colors */
 /* 2.2 - Baseline */
 /* 2.3 - Font */
@@ -569,6 +574,11 @@ img {
 */
 /* 3.1 - Sizes */
 /* 3.2 - Colors */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Form
+*--------------------------------------------------------------------------------------------------
+*/
 html {
   font-size: 1em; }
 
@@ -645,10 +655,10 @@ blockquote {
 /* 1.1 - Screen sizes */
 /* 1.2 - columns */
 /**
- *--------------------------------------------------------------------------------------------------
- * 2.0 - Typography
- *--------------------------------------------------------------------------------------------------
- */
+*--------------------------------------------------------------------------------------------------
+* 2.0 - Typography
+*--------------------------------------------------------------------------------------------------
+*/
 /* 2.1 - Colors */
 /* 2.2 - Baseline */
 /* 2.3 - Font */
@@ -660,6 +670,11 @@ blockquote {
 */
 /* 3.1 - Sizes */
 /* 3.2 - Colors */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Form
+*--------------------------------------------------------------------------------------------------
+*/
 button,
 .btn,
 .btn-primary,
@@ -719,6 +734,64 @@ a.btn-large {
 .btn-large {
   font-size: 2em;
   font-weight: bold; }
+
+/**
+ *--------------------------------------------------------------------------------------------------
+ * 1.0 - Grid
+ *--------------------------------------------------------------------------------------------------
+ */
+/* 1.1 - Screen sizes */
+/* 1.2 - columns */
+/**
+*--------------------------------------------------------------------------------------------------
+* 2.0 - Typography
+*--------------------------------------------------------------------------------------------------
+*/
+/* 2.1 - Colors */
+/* 2.2 - Baseline */
+/* 2.3 - Font */
+/* 2.4 - Sizes */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Buttons
+*--------------------------------------------------------------------------------------------------
+*/
+/* 3.1 - Sizes */
+/* 3.2 - Colors */
+/**
+*--------------------------------------------------------------------------------------------------
+* 3.0 - Form
+*--------------------------------------------------------------------------------------------------
+*/
+form .field-group {
+  margin-bottom: 1em; }
+  form .field-group label {
+    display: block;
+    margin-bottom: .5em;
+    font-weight: bold; }
+  form .field-group input:not([class^="btn"]),
+  form .field-group textarea {
+    border: 1px solid #ccc;
+    padding: .75em; }
+    form .field-group input:not([class^="btn"]):focus, form .field-group input:not([class^="btn"]):hover,
+    form .field-group textarea:focus,
+    form .field-group textarea:hover {
+      border-color: #a6a6a6;
+      outline: none; }
+    form .field-group input:not([class^="btn"]).field-full,
+    form .field-group textarea.field-full {
+      width: 100%; }
+  form .field-group .help {
+    margin: .5em 0 0;
+    color: gray;
+    font-style: italic; }
+  form .field-group.field-error label,
+  form .field-group.field-error .help,
+  form .field-group.field-error input {
+    color: red;
+    border-color: #ffcccc; }
+form .required {
+  color: red; }
 
 /**
  *--------------------------------------------------------------------------------------------------
