adds a center and end class for columns in the grid

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,6 +420,13 @@ th {
 .flush {
   padding: 0; }
 
+.end {
+  float: right; }
+
+.center {
+  float: none;
+  margin: 0 auto; }
+
 /* Column Width */
 .col-1 {
   width: 8.33333%; }
