adds controls for small-grid and push classes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -362,33 +362,10 @@ th {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-/**
- *--------------------------------------------------------------------------------------------------
- * 1.0 - Grid
- *--------------------------------------------------------------------------------------------------
- */
-/* 1.1 - Screen sizes */
-/* 1.2 - columns */
-/**
-*--------------------------------------------------------------------------------------------------
-* 2.0 - Typography
-*--------------------------------------------------------------------------------------------------
-*/
-/* 2.1 - Colors */
-/* 2.2 - Baseline */
-/* 2.3 - Font */
-/* 2.4 - Sizes */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Buttons
-*--------------------------------------------------------------------------------------------------
-*/
-/* 3.1 - Sizes */
-/* 3.2 - Colors */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Form
-*--------------------------------------------------------------------------------------------------
+/*
+  *--------------------------------------------------------------------------------------------------
+  * 1.0 - Grid
+  *--------------------------------------------------------------------------------------------------
 */
 /* Main Container */
 .container {
@@ -416,16 +393,6 @@ th {
     content: " ";
     display: table;
     clear: both; }
-
-.flush {
-  padding: 0; }
-
-.end {
-  float: right; }
-
-.center {
-  float: none;
-  margin: 0 auto; }
 
 /* Column Width */
 .col-1 {
@@ -480,9 +447,116 @@ th {
 .col-three-quarters {
   width: 75%; }
 
+.flush {
+  padding: 0; }
+
+.end {
+  float: right; }
+
+.center {
+  float: none;
+  margin: 0 auto; }
+
 img {
   max-width: 100%;
   height: auto; }
+
+/* Push and Pull */
+.push-1 {
+  position: relative;
+  left: 8.33333%; }
+
+.pull-1 {
+  position: relative;
+  right: 8.33333%; }
+
+.push-2 {
+  position: relative;
+  left: 16.66667%; }
+
+.pull-2 {
+  position: relative;
+  right: 16.66667%; }
+
+.push-3 {
+  position: relative;
+  left: 25%; }
+
+.pull-3 {
+  position: relative;
+  right: 25%; }
+
+.push-4 {
+  position: relative;
+  left: 33.33333%; }
+
+.pull-4 {
+  position: relative;
+  right: 33.33333%; }
+
+.push-5 {
+  position: relative;
+  left: 41.66667%; }
+
+.pull-5 {
+  position: relative;
+  right: 41.66667%; }
+
+.push-6 {
+  position: relative;
+  left: 50%; }
+
+.pull-6 {
+  position: relative;
+  right: 50%; }
+
+.push-7 {
+  position: relative;
+  left: 58.33333%; }
+
+.pull-7 {
+  position: relative;
+  right: 58.33333%; }
+
+.push-8 {
+  position: relative;
+  left: 66.66667%; }
+
+.pull-8 {
+  position: relative;
+  right: 66.66667%; }
+
+.push-9 {
+  position: relative;
+  left: 75%; }
+
+.pull-9 {
+  position: relative;
+  right: 75%; }
+
+.push-10 {
+  position: relative;
+  left: 83.33333%; }
+
+.pull-10 {
+  position: relative;
+  right: 83.33333%; }
+
+.push-11 {
+  position: relative;
+  left: 91.66667%; }
+
+.pull-11 {
+  position: relative;
+  right: 91.66667%; }
+
+.push-12 {
+  position: relative;
+  left: 100%; }
+
+.pull-12 {
+  position: relative;
+  right: 100%; }
 
 /* Responsive */
 @media (max-width: 1024px) {
@@ -502,6 +576,78 @@ img {
 @media (max-width: 768px) {
   [class^="col-"] {
     width: 100%; }
+
+  .push-1 {
+    position: static; }
+
+  .pull-1 {
+    position: static; }
+
+  .push-2 {
+    position: static; }
+
+  .pull-2 {
+    position: static; }
+
+  .push-3 {
+    position: static; }
+
+  .pull-3 {
+    position: static; }
+
+  .push-4 {
+    position: static; }
+
+  .pull-4 {
+    position: static; }
+
+  .push-5 {
+    position: static; }
+
+  .pull-5 {
+    position: static; }
+
+  .push-6 {
+    position: static; }
+
+  .pull-6 {
+    position: static; }
+
+  .push-7 {
+    position: static; }
+
+  .pull-7 {
+    position: static; }
+
+  .push-8 {
+    position: static; }
+
+  .pull-8 {
+    position: static; }
+
+  .push-9 {
+    position: static; }
+
+  .pull-9 {
+    position: static; }
+
+  .push-10 {
+    position: static; }
+
+  .pull-10 {
+    position: static; }
+
+  .push-11 {
+    position: static; }
+
+  .pull-11 {
+    position: static; }
+
+  .push-12 {
+    position: static; }
+
+  .pull-12 {
+    position: static; }
 
   [class^="small-"] {
     float: left;
@@ -558,34 +704,6 @@ img {
 
   .small-three-quarters {
     width: 75%; } }
-/**
- *--------------------------------------------------------------------------------------------------
- * 1.0 - Grid
- *--------------------------------------------------------------------------------------------------
- */
-/* 1.1 - Screen sizes */
-/* 1.2 - columns */
-/**
-*--------------------------------------------------------------------------------------------------
-* 2.0 - Typography
-*--------------------------------------------------------------------------------------------------
-*/
-/* 2.1 - Colors */
-/* 2.2 - Baseline */
-/* 2.3 - Font */
-/* 2.4 - Sizes */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Buttons
-*--------------------------------------------------------------------------------------------------
-*/
-/* 3.1 - Sizes */
-/* 3.2 - Colors */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Form
-*--------------------------------------------------------------------------------------------------
-*/
 html {
   font-size: 1em; }
 
@@ -654,34 +772,6 @@ blockquote {
   blockquote footer {
     font-style: normal; }
 
-/**
- *--------------------------------------------------------------------------------------------------
- * 1.0 - Grid
- *--------------------------------------------------------------------------------------------------
- */
-/* 1.1 - Screen sizes */
-/* 1.2 - columns */
-/**
-*--------------------------------------------------------------------------------------------------
-* 2.0 - Typography
-*--------------------------------------------------------------------------------------------------
-*/
-/* 2.1 - Colors */
-/* 2.2 - Baseline */
-/* 2.3 - Font */
-/* 2.4 - Sizes */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Buttons
-*--------------------------------------------------------------------------------------------------
-*/
-/* 3.1 - Sizes */
-/* 3.2 - Colors */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Form
-*--------------------------------------------------------------------------------------------------
-*/
 button,
 .btn,
 .btn-primary,
@@ -742,34 +832,6 @@ a.btn-large {
   font-size: 2em;
   font-weight: bold; }
 
-/**
- *--------------------------------------------------------------------------------------------------
- * 1.0 - Grid
- *--------------------------------------------------------------------------------------------------
- */
-/* 1.1 - Screen sizes */
-/* 1.2 - columns */
-/**
-*--------------------------------------------------------------------------------------------------
-* 2.0 - Typography
-*--------------------------------------------------------------------------------------------------
-*/
-/* 2.1 - Colors */
-/* 2.2 - Baseline */
-/* 2.3 - Font */
-/* 2.4 - Sizes */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Buttons
-*--------------------------------------------------------------------------------------------------
-*/
-/* 3.1 - Sizes */
-/* 3.2 - Colors */
-/**
-*--------------------------------------------------------------------------------------------------
-* 3.0 - Form
-*--------------------------------------------------------------------------------------------------
-*/
 form .field-group {
   margin-bottom: 1em; }
   form .field-group label {
