--- a/public/sass/settings/_settings.scss
+++ b/public/sass/settings/_settings.scss
@@ -1,38 +1,42 @@
-/**
- *--------------------------------------------------------------------------------------------------
- * 1.0 - Grid
- *--------------------------------------------------------------------------------------------------
- */
+//
+// *--------------------------------------------------------------------------------------------------
+// * 1.0 - Grid
+// *--------------------------------------------------------------------------------------------------
+//
 
- /* 1.1 - Screen sizes */
+ //* 1.1 - Screen sizes */
 
  $medium: 1024px;
  $small: 768px;
 
- /* 1.2 - columns */
+ //* 1.2 - columns */
  $column-count: 12;
  $gutter: 1em;
 
+ //* 1.3 - Add ons */
+ $small-grid: true; //controls whether you can use grid on small screens
+ $push: true;  // controls whether you can push and pull columns in a row
 
- /**
- *--------------------------------------------------------------------------------------------------
- * 2.0 - Typography
- *--------------------------------------------------------------------------------------------------
- */
 
- /* 2.1 - Colors */
+//
+// *--------------------------------------------------------------------------------------------------
+// * 2.0 - Typography
+// *--------------------------------------------------------------------------------------------------
+// 
+
+ //* 2.1 - Colors */
  $text-color: #333;
  $link-color: #0f82bd;
  $hr-color: #ccc;
  $muted-text-color: lighten($text-color, 30%);
 
- /* 2.2 - Baseline */
+ //* 2.2 - Baseline */
  $baseline: 1.5em;
 
- /* 2.3 - Font */
+ //* 2.3 - Font */
  $body-font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 
- /* 2.4 - Sizes */
+ //* 2.4 - Sizes */
  $h1-size: 3.998em;
  $h2-size: 2.827em;
  $h3-size: 1.999em;
@@ -41,19 +45,19 @@
  $h6-size: .707em;
 
  
- /**
- *--------------------------------------------------------------------------------------------------
- * 3.0 - Buttons
- *--------------------------------------------------------------------------------------------------
- */
+// 
+// *--------------------------------------------------------------------------------------------------
+// * 3.0 - Buttons
+// *--------------------------------------------------------------------------------------------------
+// 
 
  $btn-radius: 3px;
 
- /* 3.1 - Sizes */
+ //* 3.1 - Sizes */
  $btn-small-font-size: .75em;
  $btn-large-font-size: 2em;
 
- /* 3.2 - Colors */
+ //* 3.2 - Colors */
  $btn-default-bg: #dde2d4;
  $btn-default-text-color: #333;
 
@@ -61,11 +65,11 @@
  $btn-primary-text-color: lighten($btn-primary-bg, 50%);
 
 
- /**
- *--------------------------------------------------------------------------------------------------
- * 3.0 - Form
- *--------------------------------------------------------------------------------------------------
- */
+//
+// *--------------------------------------------------------------------------------------------------
+// * 3.0 - Form
+// *--------------------------------------------------------------------------------------------------
+//
 
  $field-border-color: #ccc;
  $field-error-color: red;
